--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -37,7 +37,7 @@ h2::before {
   content: "●";
   color: rgb(239,111,139);
 }
-div p:nth-child(3)::first-letter{
+p:nth-child(3)::first-letter{
   font-weight: bold;
   color: rgb(97,206,249);
 }
